fix modal overflow bug

--- a/assets/scss/pages/_album.scss
+++ b/assets/scss/pages/_album.scss
@@ -78,15 +78,11 @@
   text-decoration: underline;
 }
 
-
-.debug-border-red {
-  border: 1px solid red;
+.review-modal-body {
+  max-height: 70vh;
 }
 
-.debug-border-green {
-  border: 1px solid green;
-}
-
-.debug-border-blue {
-  border: 1px solid blue;
+.review-modal-review-preview {
+  max-height: 50vh;
+  overflow-y: auto;
 }
